fix: a display string in the DropDownBase component wrap words

--- a/src/share/components/DropDownBase/dropDownBase.scss
+++ b/src/share/components/DropDownBase/dropDownBase.scss
@@ -8,6 +8,7 @@
 
   &__display {
     flex-grow: 1;
+    white-space: nowrap;
 
     &--empty {
       color: var(--cl-text-six);
